Small z-index fix for mobile layout to hide category label beneath "this is commercial" banner.

--- a/src/scss/pages/magazine-c2.scss
+++ b/src/scss/pages/magazine-c2.scss
@@ -21,7 +21,7 @@
     width: 100%;
     font-size: 1.3rem;
     font-family: 'open sans';
-    z-index: 1;
+    z-index: 2;
 
     @media screen and (max-width: $c2-magazine-large-width) {
         position: fixed;
@@ -66,6 +66,7 @@
         font-size: 2rem;
         font-family: 'open sans';
         line-height: 4rem;
+        z-index: 2;
       }
     }
 
